<resources>
    <string name="app_name">Popular Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Popular Movie</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorite">favorite</string>
    <string name="movie_title">Movie title</string>
    <string name="release_date">Release date:</string>
    <string name="rating">Rating:</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="type_a_keyword_to_search">Type a keyword to search</string>
    <string name="adult">Adult</string>
    <string name="overview">Overview:</string>
    <string name="name_user">Vũ Việt Tùng</string>
    <string name="date_user">1999/15/07</string>
    <string name="email_user">tung123@gmail.com</string>
    <string name="sex_user">nam</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reminder">Reminder</string>
    <string name="cast_and_crew">Cast and Crew</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="name_cast">name cast</string>
    <string name="movie_type">Movie Type</string>
    <string name="time_real">Time real</string>
</resources>