<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidfinal.ui.movielist.MoviesListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_movies_list" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.androidfinal.ui.favorite.FavoriteFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.androidfinal.ui.setting.SettingFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.androidfinal.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
</navigation>