<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_movies_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_170"
    android:layout_margin="@dimen/dp_8"
    android:background="@drawable/custom_item_movie"
    android:hapticFeedbackEnabled="true">

    <TextView
        android:id="@+id/item_movies_tv_name_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/movie_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/item_movies_img_movie"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_120"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:scaleType="centerCrop"
        android:src="@drawable/test_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_movies_tv_name_movie" />

    <TextView
        android:id="@+id/item_movies_tv_release_date_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:textColor="@color/white"
        android:text="@string/release_date"
        app:layout_constraintStart_toEndOf="@+id/item_movies_img_movie"
        app:layout_constraintTop_toBottomOf="@+id/item_movies_tv_name_movie" />

    <TextView
        android:id="@+id/item_movies_tv_rating_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:textColor="@color/white"
        android:text="@string/rating"
        app:layout_constraintStart_toEndOf="@+id/item_movies_img_movie"
        app:layout_constraintTop_toBottomOf="@+id/item_movies_tv_release_date_movie" />

    <TextView
        android:id="@+id/item_movies_tv_detail_movie"
        android:layout_width="@dimen/dp_280"
        android:layout_height="@dimen/dp_70"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/detail_movie"
        android:textColor="#D6BBBB"
        app:layout_constraintStart_toEndOf="@+id/item_movies_img_movie"
        app:layout_constraintTop_toBottomOf="@+id/item_movies_tv_rating_movie" />

    <TextView
        android:id="@+id/item_movies_tv_type_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        android:text="@string/movie_type"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/item_movies_img_favorite_movie"
        app:layout_constraintTop_toTopOf="@+id/item_movies_tv_name_movie" />

    <ImageView
        android:id="@+id/item_movies_img_favorite_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:src="@drawable/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_movies_tv_type_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>